--- a/kontak.html
+++ b/kontak.html
@@ -9,7 +9,9 @@
 
 	<!-- Google Font -->
     <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,400i,700,700i" rel="stylesheet">
-    <link href="font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet">
+	<link href="font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet">
+	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
 
 	<!-- Stylesheets -->
@@ -70,7 +72,7 @@
 			  <img width="170" height="180" src="https://raw.githubusercontent.com/miawuu/miawuu.github.io/master/img/curut/mia.png"/>
                 <div class="actions">
 					<h3><font color="#beb9b9">????</h3></font>
-                	<a href="https://cheese.formice.com/transformice/mouse/mia26%230000" target="_blank"><i class="fa fa-user-circle fa-3x" aria-hidden="true"></i></a>
+                	<a href="https://miawuu.github.io/admin-info/mia.html" target="_blank"><i class="fa fa-arrow-right fa-3x" aria-hidden="true"></i></a>
                 </div>
             </div>
 		</div>
@@ -83,7 +85,7 @@
 			  <img width="150" height="200" img src="https://raw.githubusercontent.com/miawuu/miawuu.github.io/master/img/curut/brendod.png"/>
                 <div class="actions">
                 	<h3><font color="#beb9b9">????</h3></font>
-                	<a href="https://cheese.formice.com/transformice/mouse/spieky%230000" target="_blank"><i class="fa fa-user-circle fa-3x" aria-hidden="true"></i></a>
+                	<a href="https://miawuu.github.io/admin-info/brendod.html" target="_blank"><i class="fa fa-arrow-right fa-3x" aria-hidden="true"></i></a>
                 </div>
             </div>
         </div>
@@ -96,7 +98,7 @@
 			    <img width="170" height="200" img src="https://raw.githubusercontent.com/miawuu/miawuu.github.io/master/img/curut/ruru.png"/>
                 <div class="actions">
 					<h3><font color="#beb9b9">????</h3></font>
-                	<a href="https://cheese.formice.com/transformice/mouse/ruru%231623" target="_blank"><i class="fa fa-user-circle fa-3x" aria-hidden="true"></i></a>
+                	<a href="https://miawuu.github.io/admin-info/ruru.html" target="_blank"><i class="fa fa-arrow-right fa-3x" aria-hidden="true"></i></a>
                 </div>
             </div>
         </div>
@@ -109,7 +111,7 @@
 			  <img width="170" height="200" img src="https://raw.githubusercontent.com/miawuu/miawuu.github.io/master/img/curut/minek.png"/>
                 <div class="actions">
 					<h3><font color="#beb9b9">????</h3></font>
-                	<a href="https://cheese.formice.com/transformice/mouse/jasminevza%230451" target="_blank"><i class="fa fa-user-circle fa-3x" aria-hidden="true"></i></a>
+                	<a href="https://miawuu.github.io/admin-info/minek.html" target="_blank"><i class="fa fa-arrow-right fa-3x" aria-hidden="true"></i></a>
                 </div>
             </div>
 		</div>
@@ -122,7 +124,7 @@
 			    <img width="180" height="200" img src="https://raw.githubusercontent.com/miawuu/miawuu.github.io/master/img/curut/alice.png"/>
                 <div class="actions">
                 	<h3><font color="#beb9b9">????</h3></font>
-                	<a href="https://cheese.formice.com/transformice/mouse/alicekwkland%230000" target="_blank"><i class="fa fa-user-circle fa-3x" aria-hidden="true"></i></a>
+                	<a href="https://miawuu.github.io/admin-info/alice.html" target="_blank"><i class="fa fa-arrow-right fa-3x" aria-hidden="true"></i></a>
                 </div>
             </div>
 		</div>
@@ -135,7 +137,7 @@
 			    <img width="150" height="200" img src="https://raw.githubusercontent.com/miawuu/miawuu.github.io/master/img/curut/aslam.png"/>
                 <div class="actions">
                 	<h3><font color="#beb9b9">????</h3></font>
-                	<a href="https://cheese.formice.com/transformice/mouse/aslaaaam%230000" target="_blank"><i class="fa fa-user-circle fa-3x" aria-hidden="true"></i></a>
+                	<a href="https://miawuu.github.io/admin-info/aslam.html" target="_blank"><i class="fa fa-arrow-right fa-3x" aria-hidden="true"></i></a>
                 </div>
             </div>
 		</div>
@@ -148,7 +150,7 @@
 			    <img width="185" height="200" img src="https://raw.githubusercontent.com/miawuu/miawuu.github.io/master/img/curut/wilson.png"/>
                 <div class="actions">
 					<h3><font color="#beb9b9">????</h3></font>
-                	<a href="https://cheese.formice.com/transformice/mouse/verox1%230000" target="_blank"><i class="fa fa-user-circle fa-3x" aria-hidden="true"></i></a>
+                	<a href="https://miawuu.github.io/admin-info/wilson.html" target="_blank"><i class="fa fa-arrow-right fa-3x" aria-hidden="true"></i></a>
                 </div>
             </div>
 		</div>
@@ -158,11 +160,10 @@
               <h2>Reighpuy</h2>
               <!-- <div class="title title--servicer">Sarden</div> -->
               <div class="desc">Hah?</div>
-			    <img width="170" height="200" img src="https://raw.githubusercontent.com/miawuu/miawuu.github.io/master/img/curut/dapi.png"/>
+			    <img width="170" height="200" src="https://raw.githubusercontent.com/miawuu/miawuu.github.io/master/img/curut/dapi.png"/>
                 <div class="actions">
-                <a href="https://instagram.com/muh.khadaffy" target="_blank"><i class="fa fa-instagram fa-3x" aria-hidden="true"></i></a>
-                <a href="https://github.com/reighpuy" target="_blank"><i class="fa fa-github fa-3x" aria-hidden="true"></i></a>
-				<a href="https://cheese.formice.com/transformice/mouse/reighpuy%231257" target="_blank"><i class="fa fa-user-circle fa-3x" aria-hidden="true"></i></a>
+					<h3><font color="#beb9b9">????</h3></font>
+					<a href="https://miawuu.github.io/admin-info/dapi.html" target="_blank"><i class="fa fa-arrow-right fa-3x" aria-hidden="true"></i></a>
 				</div>
             </div>
         </div><br>
