--- a/admin-info/aslam.html
+++ b/admin-info/aslam.html
@@ -19,6 +19,32 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
   text-decoration: none;
 } */
 
+.tooltip {
+  position: relative;
+  display: inline-block;
+  border-bottom: 1px dotted rgb(255, 255, 255);
+}
+
+.tooltip .tooltiptext {
+  visibility: hidden;
+  width: 100px;
+  background-color: black;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 5px 0;
+
+  /* Position the tooltip */
+  position: absolute;
+  z-index: 1;
+}
+
+.tooltip:hover .tooltiptext {
+  visibility: visible;
+}
+.size_of_img{
+width:90px}
+
 .fa:hover {
     opacity: 0.7;
 }
@@ -73,17 +99,43 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <h2 class="w3-text-grey w3-padding-16"><i class="fas fa-award fa-fw w3-margin-right w3-xxlarge w3-text-black"></i>Badges</h2>
         <div class="w3-container">
           <h3>Total : 11</h3>
-          <img src="https://cheese.formice.com/img/badges/272.png" alt="272" />
-          <img src="https://cheese.formice.com/img/badges/129.png" alt="129" />
-          <img src="https://cheese.formice.com/img/badges/209.png" alt="209" />
-          <img src="https://cheese.formice.com/img/badges/18.png" alt="18" />
-          <img src="https://cheese.formice.com/img/badges/276.png" alt="276" />
-          <img src="https://cheese.formice.com/img/badges/9.png" alt="9" />
-          <img src="https://cheese.formice.com/img/badges/73.png" alt="73" />
-          <img src="https://cheese.formice.com/img/badges/42.png" alt="42" />
-          <img src="https://cheese.formice.com/img/badges/28.png" alt="28" />
-          <img src="https://cheese.formice.com/img/badges/124.png" alt="124" />
-          <img src="https://cheese.formice.com/img/badges/237.png" alt="237" />
+          <div class="tooltip"><img src="https://cheese.formice.com/img/badges/272.png" alt="272" /><span class="tooltiptext">Adventure: Hugging 2020</span></div>
+          <div class="tooltip"><img src="https://cheese.formice.com/img/badges/129.png" alt="129" /><span class="tooltiptext">Adventure: Hugging 2016 • 2017</span></div>
+          <div class="tooltip"><img src="https://cheese.formice.com/img/badges/209.png" alt="209" /><span class="tooltiptext">Adventure: Fishing 2018</span></div>
+          <div class="tooltip"><img src="https://cheese.formice.com/img/badges/18.png" alt="18" /><span class="tooltiptext">Events: Fishing 2014 • 2015 • 2016 • 2017 • 2018</span></div>
+          <div class="tooltip"><img src="https://cheese.formice.com/img/badges/276.png" alt="276" /><span class="tooltiptext">Adventure: Fishing 2020</span></div>
+          <div class="tooltip"><img src="https://cheese.formice.com/img/badges/9.png" alt="9" /><span class="tooltiptext">Obtaining: Transformice 4th Anniversary Enigma</span></div>
+          <div class="tooltip"><img src="https://cheese.formice.com/img/badges/73.png" alt="73" /><span class="tooltiptext">Adventure: Piloting 2016 • Saint Patrick's Day 2018 • Saint Patrick's Day 2019</span></div>
+          <div class="tooltip"><img src="https://cheese.formice.com/img/badges/42.png" alt="42" /><span class="tooltiptext">Obtaining: Transformice on Steam</span></div>
+          <div class="tooltip"><img src="https://cheese.formice.com/img/badges/28.png" alt="28" /><span class="tooltiptext">Events: Halloween - 2014 • 2015 • 2016 • 2017 • 2018 • 2019</span></div>
+          <div class="tooltip"><img src="https://cheese.formice.com/img/badges/124.png" alt="124" /><span class="tooltiptext">Obtaining: Play 1,500 rounds of Racing.</span></div>
+          <div class="tooltip"><img src="https://cheese.formice.com/img/badges/237.png" alt="237" /><span class="tooltiptext">Fur: Kingfisher</span></div>
+          <hr>
+        </div>
+      </div>
+
+      <div class="w3-container w3-card w3-white w3-margin-bottom">
+        <h2 class="w3-text-grey w3-padding-16"><i class="fas fa-award fa-fw w3-margin-right w3-xxlarge w3-text-black"></i>Cartouches</h2>
+        <div class="w3-container">
+            <h3>Total : 9</h3>
+            <img width="50" height="50" src="https://vignette.wikia.nocookie.net/transformice/images/7/7a/Macaron_1.png/revision/latest?cb=20160406021503
+            " alt="Macaron_1" />
+            <img width="50" height="55" src="https://vignette.wikia.nocookie.net/transformice/images/9/9e/Macaron_2.png/revision/latest?cb=20160406021512
+            " alt="Macaron_2" />
+            <img width="50" height="50" src="https://vignette.wikia.nocookie.net/transformice/images/8/86/Macaron_4.png/revision/latest?cb=20160101203106
+            " alt="Macaron_4" />
+            <img width="50" height="50" src="https://vignette.wikia.nocookie.net/transformice/images/6/6a/Macaron_5.png/revision/latest?cb=20160108142040
+            " alt="Macaron_5" />
+            <img width="50" height="50" src="https://vignette.wikia.nocookie.net/transformice/images/2/29/Macaron_7.png/revision/latest?cb=20160116080426
+            " alt="Macaron_7" />
+            <img width="50" height="50" src="https://vignette.wikia.nocookie.net/transformice/images/3/3c/Macaron_9.png/revision/latest?cb=20160205134128
+            " alt="Macaron_9" />
+            <img width="50" height="50" src="https://vignette.wikia.nocookie.net/transformice/images/a/a1/Macaron_14.png/revision/latest?cb=20160311144633
+            " alt="Macaron_014" />
+            <img width="50" height="50" src="https://vignette.wikia.nocookie.net/transformice/images/8/84/Macaron_15.png/revision/latest?cb=20160312151712
+            " alt="Macaron_15" />
+            <img width="80" height="50" src="https://vignette.wikia.nocookie.net/transformice/images/f/fa/Macaron_25.png/revision/latest?cb=20160610193121
+            " alt="Macaron_25" />
           <hr>
         </div>
       </div>
