--- a/admin-info/dapi.html
+++ b/admin-info/dapi.html
@@ -19,6 +19,33 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
   text-decoration: none;
 } */
 
+.tooltip {
+  position: relative;
+  display: inline-block;
+  border-bottom: 1px dotted rgb(255, 255, 255);
+}
+
+.tooltip .tooltiptext {
+  visibility: hidden;
+  width: 100px;
+  background-color: black;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 5px 0;
+
+  /* Position the tooltip */
+  position: absolute;
+  z-index: 1;
+}
+
+.tooltip:hover .tooltiptext {
+  visibility: visible;
+}
+.size_of_img {
+width: 90px
+}
+
 .fa:hover {
     opacity: 0.7;
 }
@@ -110,33 +137,63 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <h2 class="w3-text-grey w3-padding-16"><i class="fas fa-award fa-fw w3-margin-right w3-xxlarge w3-text-black"></i>Badges</h2>
         <div class="w3-container">
           <h3>Total : 27</h3>
-          <img src="https://cheese.formice.com/img/badges/0.png" alt="0" />
-          <img src="https://cheese.formice.com/img/badges/257.png" alt="257" />
-          <img src="https://cheese.formice.com/img/badges/131.png" alt="131" />
-          <img src="https://cheese.formice.com/img/badges/261.png" alt="261" />
-          <img src="https://cheese.formice.com/img/badges/7.png" alt="7" />
-          <img src="https://cheese.formice.com/img/badges/264.png" alt="264" />
-          <img src="https://cheese.formice.com/img/badges/267.png" alt="267" />
-          <img src="https://cheese.formice.com/img/badges/269.png" alt="269" />
-          <img src="https://cheese.formice.com/img/badges/142.png" alt="142" />
-          <img src="https://cheese.formice.com/img/badges/16.png" alt="16" />
-          <img src="https://cheese.formice.com/img/badges/145.png" alt="145" />
-          <img src="https://cheese.formice.com/img/badges/17.png" alt="17" />
-          <img src="https://cheese.formice.com/img/badges/147.png" alt="147" />
-          <img src="https://cheese.formice.com/img/badges/212.png" alt="212" />
-          <img src="https://cheese.formice.com/img/badges/28.png" alt="28" />
-          <img src="https://cheese.formice.com/img/badges/29.png" alt="29" />
-          <img src="https://cheese.formice.com/img/badges/30.png" alt="30" />
-          <img src="https://cheese.formice.com/img/badges/33.png" alt="33" />
-          <img src="https://cheese.formice.com/img/badges/34.png" alt="34" />
-          <img src="https://cheese.formice.com/img/badges/35.png" alt="35" />
-          <img src="https://cheese.formice.com/img/badges/230.png" alt="230" />
-          <img src="https://cheese.formice.com/img/badges/42.png" alt="42" />
-          <img src="https://cheese.formice.com/img/badges/174.png" alt="174" />
-          <img src="https://cheese.formice.com/img/badges/47.png" alt="47" />
-          <img src="https://cheese.formice.com/img/badges/53.png" alt="53" />
-          <img src="https://cheese.formice.com/img/badges/55.png" alt="55" />
-          <img src="https://cheese.formice.com/img/badges/124.png" alt="124" />
+          <div class="tooltip"><img src="https://cheese.formice.com/img/badges/0.png" alt="0" /><span class="tooltiptext">Adventure: Carnival - 2014</span></div>
+          <div class="tooltip"><img src="https://cheese.formice.com/img/badges/257.png" alt="257" /><span class="tooltiptext">Adventure: Chaostmas - 2019</span></div>
+          <div class="tooltip"><img src="https://cheese.formice.com/img/badges/131.png" alt="131" /><span class="tooltiptext">Adventure: Dragon - 2016 • 2017</span></div>
+          <div class="tooltip"><img src="https://cheese.formice.com/img/badges/261.png" alt="261" /><span class="tooltiptext">Adventure: 	Valentine's Day - 2020</span></div>
+          <div class="tooltip"><img src="https://cheese.formice.com/img/badges/7.png" alt="7" /><span class="tooltiptext">Adventure: Easter - 2014 • 2016 • Saint Patrick's Day 2018 • Saint Patrick's Day 2019</span></div>
+          <div class="tooltip"><img src="https://cheese.formice.com/img/badges/264.png" alt="264" /><span class="tooltiptext">Adventure: Saint Patrick's Day - 2020</span></div>
+          <div class="tooltip"><img src="https://cheese.formice.com/img/badges/267.png" alt="267" /><span class="tooltiptext">Adventure: Easter - 2020</span></div>
+          <div class="tooltip"><img src="https://cheese.formice.com/img/badges/269.png" alt="269" /><span class="tooltiptext">Obtaining: Wearing the Mustache on the Village</span></div>
+          <div class="tooltip"><img src="https://cheese.formice.com/img/badges/142.png" alt="142" /><span class="tooltiptext">Adventure: Saint Patrick's Day - 2016 • 2017 • 2018 • 2019</span></div>
+          <div class="tooltip"><img src="https://cheese.formice.com/img/badges/16.png" alt="16" /><span class="tooltiptext">Adventure: Fishing - 2014 • 2015 • 2018</span></div>
+          <div class="tooltip"><img src="https://cheese.formice.com/img/badges/145.png" alt="145" /><span class="tooltiptext">NPC: Oracle</span></div>
+          <div class="tooltip"><img src="https://cheese.formice.com/img/badges/17.png" alt="17" /><span class="tooltiptext">Adventure: Fishing - 2014 • 2015 • Pirate 2016 • 2017 • Indiana Mouse</span></div>
+          <div class="tooltip"><img src="https://cheese.formice.com/img/badges/147.png" alt="147" /><span class="tooltiptext">NPC: Buffy</span></div>
+          <div class="tooltip"><img src="https://cheese.formice.com/img/badges/212.png" alt="212" /><span class="tooltiptext">Fur: Lion</span></div>
+          <div class="tooltip"><img src="https://cheese.formice.com/img/badges/28.png" alt="28" /><span class="tooltiptext">Adventure: Halloween - 2014 • 2015 • 2016 • 2017 • 2018 • 2019</span></div>
+          <div class="tooltip"><img src="https://cheese.formice.com/img/badges/29.png" alt="29" /><span class="tooltiptext">Adventure: Halloween - 2014 • 2015 • 2016 • 2017 • 2018 • 2019</span></div>
+          <div class="tooltip"><img src="https://cheese.formice.com/img/badges/30.png" alt="30" /><span class="tooltiptext">Adventure: Halloween - 2014 • 2015 • 2016 • 2017 • 2018 • 2019</span></div>
+          <div class="tooltip"><img src="https://cheese.formice.com/img/badges/33.png" alt="33" /><span class="tooltiptext">Adventure: Christmas - 2014 • 2017 • 2018 • Oracle</span></div>
+          <div class="tooltip"><img src="https://cheese.formice.com/img/badges/34.png" alt="34" /><span class="tooltiptext">Adventure: Christmas - 2014 • 2016 • 2017 • 2018</span></div>
+          <div class="tooltip"><img src="https://cheese.formice.com/img/badges/35.png" alt="35" /><span class="tooltiptext">Adventure: Christmas - 2014 • 2015 • 2016 • 2017 • 2018</span></div>
+          <div class="tooltip"><img src="https://cheese.formice.com/img/badges/230.png" alt="230" /><span class="tooltiptext">Adventure: Valentine's Day - 2019</span></div>
+          <div class="tooltip"><img src="https://cheese.formice.com/img/badges/42.png" alt="42" /><span class="tooltiptext">Obtaining: Obtained by logging into Transformice on Steam</span></div>
+          <div class="tooltip"><img src="https://cheese.formice.com/img/badges/174.png" alt="174" /><span class="tooltiptext">Adventure: Christmas - 2016 • 2017 • 2018</span></div>
+          <div class="tooltip"><img src="https://cheese.formice.com/img/badges/47.png" alt="47" /><span class="tooltiptext">Adventure: Easter - 2015</span></div>
+          <div class="tooltip"><img src="https://cheese.formice.com/img/badges/53.png" alt="53" /><span class="tooltiptext">Fur: Tails</span></div>
+          <div class="tooltip"><img src="https://cheese.formice.com/img/badges/55.png" alt="55" /><span class="tooltiptext">Obtaining: you could obtain it by connecting your "Run for Cheese" account to your Atelier801 account</span></div>
+          <div class="tooltip"><img src="https://cheese.formice.com/img/badges/124.png" alt="124" /><span class="tooltiptext">Obtaining: Play 1,500 rounds of Racing</span></div>
+          <hr>
+        </div>
+      </div>
+
+      <div class="w3-container w3-card w3-white w3-margin-bottom">
+        <h2 class="w3-text-grey w3-padding-16"><i class="fas fa-award fa-fw w3-margin-right w3-xxlarge w3-text-black"></i>Cartouches</h2>
+        <div class="w3-container">
+            <h3>Total : 11</h3>
+            <div class="tooltip"><img width="50" height="50" src="https://vignette.wikia.nocookie.net/transformice/images/6/61/Macaron_0.png/revision/latest?cb=20160101203126
+            " alt="Macaron_14" /><span class="tooltiptext">Default cartouche if no skill points are allocated</span></div>
+            <div class="tooltip"><img width="50" height="50" src="https://vignette.wikia.nocookie.net/transformice/images/8/86/Macaron_4.png/revision/latest?cb=20160101203106
+            " alt="Macaron_14" /><span class="tooltiptext">Mistletoe</span></div>
+            <div class="tooltip"><img width="50" height="50" src="https://vignette.wikia.nocookie.net/transformice/images/6/6a/Macaron_5.png/revision/latest?cb=20160108142040
+            " alt="Macaron_14" /><span class="tooltiptext">Crown</span></div>
+            <div class="tooltip"><img width="50" height="50" src="https://vignette.wikia.nocookie.net/transformice/images/3/3c/Macaron_9.png/revision/latest?cb=20160205134128
+            " alt="Macaron_14" /><span class="tooltiptext">Blue dragon</span></div>
+            <div class="tooltip"><img width="50" height="50" src="https://vignette.wikia.nocookie.net/transformice/images/a/a1/Macaron_14.png/revision/latest?cb=20160311144633
+            " alt="Macaron_14" /><span class="tooltiptext">Lucky</span></div>
+            <div class="tooltip"><img width="50" height="50" src="https://vignette.wikia.nocookie.net/transformice/images/8/84/Macaron_15.png/revision/latest?cb=20160312151712
+            " alt="Macaron_14" /><span class="tooltiptext">Culinary components</span></div>
+            <div class="tooltip"><img width="50" height="50" src="https://vignette.wikia.nocookie.net/transformice/images/d/d0/Macaron_16.png/revision/latest?cb=20160324195213
+            " alt="Macaron_14" /><span class="tooltiptext">Shaman wing, beads, and ornaments</span></div>
+            <div class="tooltip"><img width="50" height="50" src="https://vignette.wikia.nocookie.net/transformice/images/9/91/Macaron_20.png/revision/latest?cb=20160415225903
+            " alt="Macaron_14" /><span class="tooltiptext">Dinosaur fossils & egg</span></div>
+            <div class="tooltip"><img width="50" height="50" src="https://vignette.wikia.nocookie.net/transformice/images/c/c1/Macaron_21.png/revision/latest?cb=20160430012120
+            " alt="Macaron_14" /><span class="tooltiptext">Party</span></div>
+            <div class="tooltip"><img width="50" height="50" src="https://vignette.wikia.nocookie.net/transformice/images/a/a1/Macaron_24.png/revision/latest?cb=20180223183816
+            " alt="Macaron_14" /><span class="tooltiptext">Pirate</span></div>
+            <div class="tooltip"><img width="50" height="50" src="https://vignette.wikia.nocookie.net/transformice/images/c/cd/Macaron_28.png/revision/latest?cb=20180223183928
+            " alt="Macaron_14" /><span class="tooltiptext">Witch</span></div>
           <hr>
         </div>
       </div>
